--- a/App/src/main/res/layout/device_control_activity.xml
+++ b/App/src/main/res/layout/device_control_activity.xml
@@ -25,6 +25,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textSize="16sp"
+                android:layout_margin="8dp"
                 android:text="@string/label_abonent"
                 android:textColor="@color/colorWhite"/>
 
