--- a/App/src/main/res/layout/lineitem_device.xml
+++ b/App/src/main/res/layout/lineitem_device.xml
@@ -86,7 +86,7 @@
         android:layout_marginStart="4dp"
         android:layout_marginEnd="10dp"
         android:layout_marginTop="4dp"
-        android:src="@drawable/check256x256"
+        android:src="@drawable/ic_check_black_48dp"
         android:visibility="gone">
     </ImageView>
 
