--- a/App/src/main/res/layout/view_contacts.xml
+++ b/App/src/main/res/layout/view_contacts.xml
@@ -12,45 +12,58 @@
 
     <RelativeLayout
         android:layout_width="match_parent"
-        android:descendantFocusability="beforeDescendants"
-        android:focusableInTouchMode="true"
+        android:layout_height="68dp"
         android:background="@drawable/border"
-        android:layout_height="68dp">
+        android:descendantFocusability="beforeDescendants"
+        android:focusableInTouchMode="true">
 
         <RelativeLayout
             android:id="@+id/viewContactChosen"
-            android:background="@drawable/border"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_alignParentStart="true"
+            android:layout_gravity="center_vertical"
             android:layout_marginBottom="0dp"
             android:layout_marginTop="0dp"
+            android:background="@drawable/border"
             android:visibility="gone">
+
+            <Space
+                android:id="@+id/spaceChosenContactName"
+                android:layout_width="match_parent"
+                android:layout_height="8dp" />
 
             <TextView
                 android:id="@+id/textViewChosenContactName"
-                android:layout_gravity="start"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="4dp"
-                android:layout_marginStart="8dp"
+                android:layout_below="@id/spaceChosenContactName"
+                android:layout_gravity="start"
                 android:layout_marginBottom="0dp"
-                android:textSize="16sp"
-                android:textColor="#000000"/>
+                android:layout_marginStart="8dp"
+                android:layout_marginTop="4dp"
+                android:textColor="#000000"
+                android:textSize="16sp" />
 
             <TextView
                 android:id="@+id/textViewChosenContactIp"
-                android:layout_gravity="start"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="0dp"
-                android:layout_marginStart="8dp"
-                android:layout_marginBottom="4dp"
                 android:layout_below="@id/textViewChosenContactName"
-                android:textSize="14sp"
-                android:textColor="#108090"/>
+                android:layout_gravity="start"
+                android:layout_marginBottom="4dp"
+                android:layout_marginStart="8dp"
+                android:layout_marginTop="0dp"
+                android:textColor="#108090"
+                android:textSize="14sp" />
+
+            <Space
+                android:layout_below="@id/textViewChosenContactIp"
+                android:layout_width="match_parent"
+                android:layout_height="8dp" />
 
         </RelativeLayout>
+
 
         <EditText
             android:id="@+id/editTextSearch"
