--- a/App/src/main/res/layout/lineitem_device.xml
+++ b/App/src/main/res/layout/lineitem_device.xml
@@ -22,7 +22,7 @@
             android:layout_marginStart="4dp"
             android:layout_marginEnd="10dp"
             android:layout_marginTop="4dp"
-            android:src="@drawable/ic_launcher"
+            android:src="@drawable/bluetoothicon"
             android:visibility="visible">
         </ImageView>
 
@@ -58,21 +58,6 @@
             android:layout_height="wrap_content"
             android:textColor="@color/colorBlack"
             android:textSize="10dp" />
-
-     <!--
-                    <TextView
-                        android:id="@+id/bluetooth_class"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:textSize="10dp" />
-
-                    <TextView
-                        android:id="@+id/device_rssi"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:textSize="10dp" />
-
-        -->
 
     </LinearLayout>
 
