--- a/App/src/main/res/menu/main.xml
+++ b/App/src/main/res/menu/main.xml
@@ -1,20 +1,25 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<menu xmlns:android="http://schemas.android.com/apk/res/android">
+<menu xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:android="http://schemas.android.com/apk/res/android">
+
     <item
         android:id="@+id/menu_settings"
         android:checkable="false"
         android:orderInCategory="1"
-        android:showAsAction="ifRoom"
-        android:title="@string/menu_settings" />
+        android:title="@string/menu_settings"
+        app:showAsAction="never" />
+
     <item
         android:id="@+id/menu_scan"
         android:orderInCategory="100"
-        android:showAsAction="ifRoom|withText"
-        android:title="@string/menu_scan" />
+        android:title="@string/menu_scan"
+        app:showAsAction="never" />
+
     <item
         android:id="@+id/menu_stop"
         android:orderInCategory="101"
-        android:showAsAction="ifRoom|withText"
-        android:title="@string/menu_stop" />
+        android:title="@string/menu_stop"
+        app:showAsAction="never" />
+
 </menu>
