--- a/App/src/main/res/layout/activity_device_control.xml
+++ b/App/src/main/res/layout/activity_device_control.xml
@@ -83,7 +83,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="0dp"
                 android:layout_weight="1"
-                android:onClick="btnChangeDevice"
+                android:onClick="clickBtnChangeDevice"
                 android:text="@string/label_buttonChDevice"
                 android:textSize="16sp" />
 
