--- a/App/src/main/res/xml/settings.xml
+++ b/App/src/main/res/xml/settings.xml
@@ -3,21 +3,31 @@
 
     <ListPreference
         android:key="@string/opMode"
-        android:title="Mode"
         android:summary="Set application's operation mode"
         android:defaultValue="1"
         android:entries="@array/opMode"
         android:entryValues="@array/opMode"
-        android:dialogTitle="Choose operation mode" />
+        android:dialogTitle="Choose operation mode"
+        android:title="Mode" />
 
     <EditTextPreference
-        android:key="login"
-        android:summary="Введите логин"
-        android:title="Логин" />
+        android:key="btLatencyMs"
+        android:summary="Set minimal sleep interval (ms) on transmit BT2BT-packets"
+        android:inputType="number"
+        android:dialogTitle="Choose sleep interval"
+        android:title="BT on transmit sleep interval" />
+
+    <EditTextPreference
+        android:key="bt2NetFactor"
+        android:summary="Set amount of BT-packets in one NET-send"
+        android:inputType="number"
+        android:dialogTitle="Choose BT2NET factor"
+        android:title="BT2NET factor" />
 
     <CheckBoxPreference
-        android:key="enabled"
-        android:summary="Отображать логин"
-        android:title="Отображать" />
+        android:key="btSingleBacket"
+        android:defaultValue="false"
+        android:summary="Set if we try not to use bufferization on BT data"
+        android:title="No bufferization on BT"/>
 
 </PreferenceScreen>
