--- a/App/src/main/res/values/arrays.xml
+++ b/App/src/main/res/values/arrays.xml
@@ -1,9 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+
     <string-array name="opMode">
         <item>Normal</item>
         <item>Bt2AudOut</item>
         <item>AudIn2Bt</item>
         <item>Bt2Bt</item>
+        <item>AudIn2AudOut</item>
     </string-array>
+
+    <string-array name="audioCodecType">
+        <item>Sit_2_1_java</item>
+        <!--<item>Sit_2_1_native</item>-->
+        <!--<item>Sit_3_0_java</item>-->
+        <!--<item>Sit_3_0_native</item>-->
+   </string-array>
+
 </resources>
