--- a/App/src/main/res/menu/scan_menu.xml
+++ b/App/src/main/res/menu/scan_menu.xml
@@ -8,13 +8,15 @@
         android:checkable="false"
         android:orderInCategory="1"
         android:title="@string/menu_settings"
-        app:showAsAction="ifRoom" />
+        app:showAsAction="never" />
+
     <!--<item-->
         <!--android:id="@+id/menu_refresh"-->
         <!--android:checkable="false"-->
         <!--android:icon="@drawable/check256x256"-->
         <!--android:orderInCategory="1"-->
         <!--android:showAsAction="ifRoom" />-->
+
     <!--<item-->
         <!--android:id="@+id/menu_connect"-->
         <!--android:icon="@drawable/crossblack"-->
