--- a/App/src/main/res/values/styles.xml
+++ b/App/src/main/res/values/styles.xml
@@ -1,15 +1,12 @@
 <resources>
 
     <!-- Base application theme. -->
-    <style name="AppTheme" parent="android:Theme.Holo">
+    <style name="AppTheme" parent="PreferenceFixTheme">
         <!-- This is the styling for action bar -->
         <item name="android:windowActionBar">@color/colorBlack</item>
+        <!--<item name="colorAccent">@color/accent</item> -->
+        <!--<item name="colorPrimary">@color/primary</item> -->
+        <!--<item name="colorPrimaryDark">@color/primary_dark</item> -->
     </style>
-
-
-
-
-
-
 
 </resources>
