--- a/App/src/main/res/xml/settings.xml
+++ b/App/src/main/res/xml/settings.xml
@@ -3,23 +3,18 @@
 
     <ListPreference
         android:key="@string/opMode"
-        android:summary="Set application's operation mode"
         android:defaultValue="1"
-        android:entries="@array/opMode"
-        android:entryValues="@array/opMode"
         android:dialogTitle="Choose operation mode"
         android:title="Mode" />
 
     <EditTextPreference
         android:key="@string/btLatencyMs"
-        android:summary="Set minimal sleep interval (ms) on transmit BT2BT-packets"
         android:inputType="number"
-        android:dialogTitle="Choose sleep interval"
+        android:dialogTitle="Choose sleep interval (ms)"
         android:title="BT on transmit sleep interval" />
 
     <EditTextPreference
         android:key="@string/bt2NetFactor"
-        android:summary="Set amount of BT-packets in one NET-send"
         android:inputType="number"
         android:dialogTitle="Choose BT2NET factor"
         android:title="BT2NET factor" />
@@ -27,15 +22,12 @@
     <CheckBoxPreference
         android:key="@string/btSinglePacket"
         android:defaultValue="false"
-        android:summary="Set if we try not to use bufferization on BT data"
+        android:summary="Try not to buff BT data"
         android:title="No bufferization on BT" />
 
     <ListPreference
         android:key="@string/audioCodecType"
-        android:summary="Set audiocodec for decoding/encoding of audio data"
         android:defaultValue="1"
-        android:entries="@array/audioCodecType"
-        android:entryValues="@array/audioCodecType"
         android:dialogTitle="Choose audiocodec"
         android:title="Audiocodec" />
 
