--- a/App/src/main/res/values-v11/template-styles.xml
+++ b/App/src/main/res/values-v11/template-styles.xml
@@ -3,4 +3,6 @@
     <!-- Activity themes
     <style name="Theme.Base" parent="android:Theme.Holo.Light"/> -->
 
+    <style name="Theme" parent="@android:style/Theme.Black" />
+
 </resources>
