--- a/App/src/main/res/layout/activity_device_control.xml
+++ b/App/src/main/res/layout/activity_device_control.xml
@@ -83,7 +83,6 @@
                 android:layout_width="match_parent"
                 android:layout_height="0dp"
                 android:layout_weight="1"
-                android:onClick="clickBtnChangeDevice"
                 android:text="@string/label_buttonChDevice"
                 android:textSize="16sp" />
 
@@ -151,7 +150,7 @@
         </LinearLayout>
 
         <ListView
-            android:id="@+id/ListDevices"
+            android:id="@+id/listDevices"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="@color/colorWhite">
