--- a/App/src/main/res/layout/view_contacts.xml
+++ b/App/src/main/res/layout/view_contacts.xml
@@ -100,7 +100,7 @@
         android:layout_height="wrap_content">
 
         <android.support.v7.widget.RecyclerView
-            android:id="@+id/viewRecycler"
+            android:id="@+id/viewRecyclerContacts"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:scrollbars="vertical" />
