--- a/App/src/main/res/layout/activity_call.xml
+++ b/App/src/main/res/layout/activity_call.xml
@@ -14,7 +14,27 @@
         android:visibility="visible">
 
         <LinearLayout
-            android:id="@+id/ContactList"
+            android:id="@+id/traffic_info"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_margin="@dimen/ip_info_margin"
+            android:layout_weight="2"
+            android:orientation="vertical">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textSize="16sp"
+                android:layout_margin="8dp"
+                android:text="@string/label_traffic"
+                android:textColor="@color/colorWhite"/>
+
+            <include layout="@layout/view_traffic" />
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:id="@+id/contacts_list"
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_margin="@dimen/ip_info_margin"
@@ -138,7 +158,7 @@
             android:orientation="vertical">
 
             <TextView
-                android:id="@+id/AvailDevices"
+                android:id="@+id/available_devices"
                 android:layout_width="match_parent"
                 android:layout_height="48dp"
                 android:background="#008080"
@@ -155,14 +175,6 @@
             android:layout_height="wrap_content"
             android:background="@color/colorWhite">
         </ListView>
-        <!---->
-        <!--<LinearLayout-->
-            <!--android:layout_width="match_parent"-->
-            <!--android:layout_height="wrap_content"-->
-            <!--android:orientation="vertical">-->
-
-
-        <!--</LinearLayout>-->
 
     </LinearLayout>
 
