--- a/App/src/main/res/layout/view_traffic.xml
+++ b/App/src/main/res/layout/view_traffic.xml
@@ -5,7 +5,14 @@
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
-    
+
+    <TextView
+        android:id="@+id/textViewRssi"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:typeface="monospace"
+        android:textSize="14sp"/>
+
     <TextView
         android:id="@+id/textViewPacketSize"
         android:layout_width="match_parent"
