--- a/App/src/main/res/xml/settings.xml
+++ b/App/src/main/res/xml/settings.xml
@@ -9,6 +9,12 @@
         android:title="Mode" />
 
     <EditTextPreference
+        android:key="@string/btChosenAddr"
+        android:inputType="text"
+        android:dialogTitle="MAC-address in form of XX:XX:XX:XX:XX:XX"
+        android:title="Chosen device" />
+
+    <EditTextPreference
         android:key="@string/btLatencyMs"
         android:inputType="number"
         android:dialogTitle="Choose sleep interval (ms)"
