--- a/App/src/main/res/layout/activity_call.xml
+++ b/App/src/main/res/layout/activity_call.xml
@@ -173,19 +173,26 @@
             android:id="@+id/listDevices"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:divider="@color/reddivider"
+            android:dividerHeight="@dimen/twodp"
             android:background="@color/colorWhite">
         </ListView>
 
-        <Button
-            android:id="@+id/btnScanDevice"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:background="#008080"
-            android:textColor="@color/colorWhite"
-            android:gravity="center"
-            android:text="@string/label_btnScanDevice"
-            android:textSize="16sp" />
+        <!--<Button-->
+            <!--android:id="@+id/btnScanDevice"-->
+            <!--android:layout_width="match_parent"-->
+            <!--android:layout_height="wrap_content"-->
+            <!--android:background="#008080"-->
+            <!--android:textColor="@color/colorWhite"-->
+            <!--android:gravity="center"-->
+            <!--android:text="@string/label_btnScanDevice"-->
+            <!--android:textSize="16sp" />-->
 
     </LinearLayout>
+
+
+
+
+
 
 </FrameLayout>
