--- a/App/src/main/res/layout/dialog_chose.xml
+++ b/App/src/main/res/layout/dialog_chose.xml
@@ -3,47 +3,57 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_weight="3"
-    android:orientation="horizontal">
+    android:orientation="vertical"
+    android:background="@android:color/white">
 
     <TextView
         android:id="@+id/dialogTitle"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_centerVertical="true"
+        android:layout_width="match_parent"
+        android:layout_height="40dp"
         android:textSize="20sp"
-        android:textColor="@android:color/black"/>
+        android:layout_gravity="center"
+        android:textColor="@android:color/black" />
 
-    <Button
-        android:id="@+id/btnProceed"
-        android:layout_weight="1"
-        android:layout_width="wrap_content"
+    <LinearLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
-        android:layout_marginBottom="8dp"
-        android:layout_marginStart="8dp"
-        android:gravity="center"
-        android:textSize="14sp"
-        android:textColor="#108090"
-        android:text="PROCEED"
-        android:visibility="visible" />
+        android:orientation="horizontal">
 
-    <Space
-        android:layout_width="16dp"
-        android:layout_weight="1"
-        android:layout_height="wrap_content" />
+        <Button
+            android:id="@+id/btnProceed"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="8dp"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="8dp"
+            android:layout_weight="1"
+            android:background="@android:color/white"
+            android:gravity="center"
+            android:text="PROCEED"
+            android:textColor="#108090"
+            android:textSize="14sp"
+            android:visibility="visible" />
 
-    <Button
-        android:id="@+id/btnCancel"
-        android:layout_weight="1"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
-        android:layout_marginBottom="8dp"
-        android:layout_marginEnd="8dp"
-        android:gravity="center"
-        android:textSize="14sp"
-        android:textColor="#108090"
-        android:text="CANCEL"
-        android:visibility="visible" />
+        <Space
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1" />
+
+        <Button
+            android:id="@+id/btnCancel"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="8dp"
+            android:layout_marginEnd="8dp"
+            android:layout_marginTop="8dp"
+            android:layout_weight="1"
+            android:background="@android:color/white"
+            android:gravity="center"
+            android:text="CANCEL"
+            android:textColor="#108090"
+            android:textSize="14sp"
+            android:visibility="visible" />
+    </LinearLayout>
+
 
 </LinearLayout>
