--- a/App/src/main/res/layout/activity_call.xml
+++ b/App/src/main/res/layout/activity_call.xml
@@ -155,6 +155,40 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:orientation="horizontal">
+
+            <TextView
+                android:id="@+id/connect_devices"
+                android:layout_width="match_parent"
+                android:layout_height="48dp"
+                android:background="#008080"
+                android:gravity="center"
+                android:text="Connect Devices"
+                android:textAllCaps="true"
+                android:textColor="@color/colorWhite"
+                android:textSize="18sp" />
+
+            <ProgressBar
+                android:id="@+id/connecting"
+                android:layout_width="32dp"
+                android:layout_height="32dp"
+                android:layout_gravity="end"
+                android:visibility="gone" />
+
+        </LinearLayout>
+
+        <ListView
+            android:id="@+id/listConnectDevices"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:divider="@color/reddivider"
+            android:dividerHeight="@dimen/twodp"
+            android:background="@color/colorWhite">
+        </ListView>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
             android:orientation="vertical">
 
             <TextView
