--- a/App/src/main/res/layout/dialog_chose.xml
+++ b/App/src/main/res/layout/dialog_chose.xml
@@ -30,7 +30,7 @@
             android:background="@android:color/white"
             android:gravity="center"
             android:text="PROCEED"
-            android:textColor="#108090"
+            android:textColor="@color/colorBlack"
             android:textSize="14sp"
             android:visibility="visible" />
 
@@ -50,7 +50,7 @@
             android:background="@android:color/white"
             android:gravity="center"
             android:text="CANCEL"
-            android:textColor="#108090"
+            android:textColor="@color/colorBlack"
             android:textSize="14sp"
             android:visibility="visible" />
     </LinearLayout>
