--- a/App/src/main/res/layout/lineitem_device.xml
+++ b/App/src/main/res/layout/lineitem_device.xml
@@ -11,31 +11,29 @@
         android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
         android:layout_gravity="start"
-        android:layout_marginStart="4dp"
         android:layout_marginEnd="10dp"
+        android:layout_marginStart="4dp"
         android:layout_marginTop="4dp">
 
         <ImageView
             android:id="@+id/icon"
             android:layout_width="48dp"
             android:layout_height="48dp"
-            android:layout_marginStart="4dp"
             android:layout_marginEnd="10dp"
+            android:layout_marginStart="4dp"
             android:layout_marginTop="4dp"
             android:src="@drawable/bluetoothicon"
-            android:visibility="visible">
-        </ImageView>
+            android:visibility="visible"></ImageView>
 
         <ImageView
             android:id="@+id/iconhead"
             android:layout_width="48dp"
             android:layout_height="48dp"
-            android:layout_marginStart="4dp"
             android:layout_marginEnd="10dp"
+            android:layout_marginStart="4dp"
             android:layout_marginTop="4dp"
             android:src="@drawable/headsetblack"
-            android:visibility="gone">
-        </ImageView>
+            android:visibility="gone"></ImageView>
     </FrameLayout>
 
     <LinearLayout
@@ -61,18 +59,29 @@
 
     </LinearLayout>
 
-
-
     <ImageView
         android:id="@+id/iconcheck"
         android:layout_width="48dp"
         android:layout_height="48dp"
         android:layout_alignParentEnd="true"
-        android:layout_marginStart="4dp"
         android:layout_marginEnd="10dp"
+        android:layout_marginStart="4dp"
         android:layout_marginTop="4dp"
         android:src="@drawable/ic_check_black_48dp"
         android:visibility="gone">
+
     </ImageView>
+
+    <ProgressBar
+        android:id="@+id/connecting"
+        android:layout_alignParentEnd="true"
+        android:layout_width="48dp"
+        android:layout_height="48dp"
+        android:layout_marginEnd="10dp"
+        android:layout_marginStart="4dp"
+        android:layout_marginTop="4dp"
+        android:src="@drawable/ic_check_black_48dp"
+        android:visibility="gone" />
+
 
 </RelativeLayout>
