--- a/App/src/main/res/menu/main_menu.xml
+++ b/App/src/main/res/menu/main_menu.xml
@@ -10,16 +10,16 @@
         android:title="@string/menu_settings"
         app:showAsAction="never" />
 
-    <item
-        android:id="@+id/menu_scan"
-        android:orderInCategory="2"
-        android:title="@string/menu_scan"
-        app:showAsAction="never" />
+    <!--<item-->
+        <!--android:id="@+id/menu_scan"-->
+        <!--android:orderInCategory="2"-->
+        <!--android:title="@string/menu_scan"-->
+        <!--app:showAsAction="never" />-->
 
-    <item
-        android:id="@+id/menu_stop"
-        android:orderInCategory="3"
-        android:title="@string/menu_stop"
-        app:showAsAction="never" />
+    <!--<item-->
+        <!--android:id="@+id/menu_stop"-->
+        <!--android:orderInCategory="3"-->
+        <!--android:title="@string/menu_stop"-->
+        <!--app:showAsAction="never" />-->
 
 </menu>
